Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-39575

Protocol::end_statement(): Assertion `0' failed after insert into xmltype union of valid and invalid xml

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 12.3
    • 12.3.2
    • XML
    • None
    • Can result in hang or crash
    • Q2/2026 Server Development

    Description

      CREATE TABLE t1(x XMLTYPE);
      INSERT INTO t1 SELECT '<a/>' UNION SELECT 'a';
      DROP TABLE t1;
      

      mariadbd: /12.3/src/sql/protocol.cc:639: void Protocol::end_statement(): Assertion `0' failed.
      260512 15:52:59 [ERROR] /12.3/bld/sql/mariadbd got signal 6 ;
       
      Server version: 12.3.2-MariaDB-asan-debug-log source revision: 181f13ec49fdf14a873e9ebf7440133b3e0d70d9
       
      libc_sigaction.c:0(__restore_rt)[0x7ba5e5445330]
      nptl/pthread_kill.c:44(__pthread_kill_implementation)[0x7ba5e549eb2c]
      posix/raise.c:27(__GI_raise)[0x7ba5e544527e]
      stdlib/abort.c:81(__GI_abort)[0x7ba5e54288ff]
      intl/loadmsgcat.c:1177(_nl_load_domain)[0x7ba5e542881b]
      /lib/x86_64-linux-gnu/libc.so.6(+0x3b517)[0x7ba5e543b517]
      sql/protocol.cc:640(Protocol::end_statement())[0x5de9065ad429]
      sql/sql_parse.cc:2453(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x5de9068eab61]
      sql/sql_parse.cc:1437(do_command(THD*, bool))[0x5de9068ec706]
      sql/sql_connect.cc:1503(do_handle_one_connection(CONNECT*, bool))[0x5de906dad4bc]
      sql/sql_connect.cc:1415(handle_one_connection)[0x5de906dad9a1]
      asan/asan_interceptors.cpp:234(asan_thread_start(void*))[0x7ba5e645ea42]
      nptl/pthread_create.c:447(start_thread)[0x7ba5e549caa4]
      x86_64/clone3.S:80(clone3)[0x7ba5e5529c6c]
       
      Query (0x52d00017c448): INSERT INTO t1 SELECT '<a/>' UNION SELECT 'a'
      

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6.5h
                  6.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.