plugin/type_xmltype/sql_type_xmltype.cc
@@ -215,9 +215,8 @@ int Field_xmltype::store(const char *from, size_t length, CHARSET_INFO *cs)
   return Field_blob::store(from, length, cs);
 
 err:
-  get_thd()->push_warning_wrong_value(
-               Sql_condition::WARN_LEVEL_WARN, "XML",
-               ErrConvString(from, length, cs).ptr());
+  my_error(ER_WRONG_VALUE, MYF(0),
+           "XMLTYPE", ErrConvString(from, length, cs).ptr());
   return -1;
 }
 
